--- a/singolo1.css
+++ b/singolo1.css
@@ -111,3 +111,67 @@ body {
   background-color: #494e62;
   margin: auto;
 }
+
+.slider {
+  height: 600px;
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+}
+
+.services {
+  height: 500px;
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #ffffff;
+}
+
+.services__wrapper {
+  width: 940px;
+  height: 363px;
+  margin: auto;
+}
+
+.services__banner {
+  padding-top: 60px;
+}
+
+.services__banner__head>h3 {
+  font-family: 'Lato-Black', sans-serif;
+  font-size: 30px;
+  letter-spacing: 0.1px;
+  margin: 0;
+  color: #666d89;
+}
+
+.services__banner__info>h5 {
+  font-family: 'Lato-Light', sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.84px;
+  line-height: 30px;
+  margin: 17px 0 0;
+  color: #767e9e;
+}
+
+.services__banner__info>h5>span {
+  letter-spacing: 0.65px;
+}
+
+.benefits {
+  width: 938px;
+  height: 210px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+}
+
+.benefits__content {
+  width: 299px;
+  height: 86px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.benefits__content__text {
+  width: 220px;
+}
