--- a/singolo1.css
+++ b/singolo1.css
@@ -116,6 +116,68 @@ body {
   height: 600px;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.slider__panel {
+  margin: auto;
+  width: 106px;
+  display: flex;
+  justify-content: center;
+  opacity: 0.2;
+}
+
+.slider__panel :hover {
+  opacity: 0.1;
+  cursor: pointer;
+}
+
+.slider__content {
+  width: 808px;
+}
+
+.phone__vertical {
+  position: relative;
+}
+
+.phone__vertical__content {
+  position: absolute;
+  background-image: url('./assets/PhoneVertical.png');
+  width: 215px;
+  height: 458px;
+  margin: 52px 0 0 6px;
+  z-index: 99;
+}
+
+.phone__horizontal__content {
+  position: absolute;
+  background-image: url('./assets/PhoneHorizontal.png');
+  width: 458px;
+  height: 215px;
+  margin: 175px 0 0 319px;
+  z-index: 99;
+}
+
+.phone__vertical__shadow {
+  position: absolute;
+  background-image: url('./assets/ShadowVertical.png');
+  width: 240px;
+  height: 483px;
+  margin: 52px 0 0 6px;
+  z-index: 97;
+  opacity: 0.2;
+}
+
+.phone__horizontal__shadow {
+  position: absolute;
+  background-image: url('./assets/ShadowHorizont.png');
+  width: 483px;
+  height: 240px;
+  margin: 175px 0 0 319px;
+  z-index: 97;
+  opacity: 0.2;
 }
 
 .services {
@@ -162,16 +224,41 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-between;
+  margin: 43px 0 0;
 }
 
 .benefits__content {
   width: 299px;
-  height: 86px;
+  height: 87px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
+.benefits__content__image {
+  margin: 4px 0 0;
+  width: 59px;
+  height: 59px;
+}
+
 .benefits__content__text {
   width: 220px;
+}
+
+.benefits__content__text>h4 {
+  margin: 0;
+  font-family: 'Lato-Black', sans-serif;
+  font-size: 18px;
+  letter-spacing: 0.11px;
+  color: #666d89;
+}
+
+.benefits__content__text>p {
+  margin: 8px 0 0;
+  font-family: 'Lato-Regular', sans-serif;
+  font-size: 12px;
+  /*letter-spacing: 1.025px;*/
+  line-height: 1.797;
+  color: #767e9e;
+  text-align: left;
 }
