--- a/singolo2.css
+++ b/singolo2.css
@@ -38,7 +38,7 @@ body {
 }
 
 .portfolio {
-  height: 876px;
+  height: 870px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
   display: flex;
@@ -49,17 +49,65 @@ body {
 .portfolio__wrapper {
   width: 944px;
   height: 732px;
-  margin: auto;
+  margin: 67px auto auto;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
 
 .portfolio__banner {
-  height: 73px;
+  height: 110px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-family: 'Lato-Black';
+  color: #666d89;
+  font-size: 20px;
+}
+
+.portfolio__banner__head {
+  font-family: 'Lato-Black';
+  color: #666d89;
+  font-size: 31px;
+  margin: 0 1px;
+  line-height: 22px;
+  letter-spacing: 0px;
+}
+
+.portfolio__banner__info {
+  font-family: 'Lato-Light';
+  text-align: justify;
+  color: #666d89;
+  font-size: 18px;
+  letter-spacing: -0.21px;
+  margin: 16px 0 0 2px;
+}
+
+.portfolio__panel {
+  margin: 0 0 0 3px;
+  display: flex;
+  justify-content: space-between;
+  width: 287px;
+  height: 22px;
+}
+
+.portfolio__panel__link {
+  text-decoration: none;
+  color: #666d89;
+  font-family: 'Lato-Regular';
+  text-align: justify;
+  font-size: 12px;
+  letter-spacing: -0.15px;
+  border: 1px solid #666d89;
+  border-radius: 5px;
+  margin: auto 0;
+  padding: 3px 6px;
+}
+
+.portfolio__panel__link:hover {
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
 }
 
 p {
@@ -67,11 +115,10 @@ p {
 }
 
 .portfolio__content__images {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
 }
 
 .about {
@@ -82,7 +129,7 @@ p {
 
 .about__wrapper {
   width: 940px;
-  height: 363px;
+  height: 595px;
   margin: auto;
 }
 
@@ -91,15 +138,15 @@ p {
 }
 
 .about__banner__head>h3 {
-  font-family: 'Lato-Black', sans-serif;
+  font-family: 'Lato-Black';
   font-size: 30px;
-  letter-spacing: 0.1px;
+  letter-spacing: -0.1px;
   margin: 0;
   color: #666d89;
 }
 
 .about__banner__info>h5 {
-  font-family: 'Lato-Light', sans-serif;
+  font-family: 'Lato-Light';
   font-size: 16px;
   letter-spacing: 0.84px;
   line-height: 30px;
@@ -108,22 +155,22 @@ p {
 }
 
 .about__banner__info>h5>span {
-  letter-spacing: 0.65px;
+  word-spacing: -1.5px;
 }
 
 .command {
-  width: 944px;
+  width: 939px;
   height: 443px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-between;
-  margin: 43px 0 0;
+  margin: 42px 0 0;
 }
 
 .command__content {
-  width: 299px;
-  height: 87px;
+  width: 300px;
+  height: 450px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -136,22 +183,29 @@ p {
 }
 
 .command__content__text {
-  width: 220px;
+  height: 83px;
+
 }
 
 .command__content__text>h4 {
   margin: 0;
   font-family: 'Lato-Black', sans-serif;
   font-size: 18px;
-  letter-spacing: 0.11px;
+  letter-spacing: -0.18px;
   color: #666d89;
 }
+
+.special  {
+  letter-spacing: 0.1px !important;
+}
+
+
 
 .command__content__text>p {
   margin: 8px 0 0;
   font-family: 'Lato-Regular', sans-serif;
   font-size: 12px;
-  /*letter-spacing: 1.025px;*/
+  letter-spacing: -0.11px;
   line-height: 1.797;
   color: #767e9e;
   text-align: left;
@@ -165,4 +219,6 @@ p {
 
 .command__content__social__link :hover {
   box-shadow: 0px 7px 4px -6px rgba(0, 0, 0, 0.25);
+  border: 1px solid rgba(135, 178, 206, 0.76);
+  border-radius: 15px;
 }
